--- a/src/main/resources/templates/media.html
+++ b/src/main/resources/templates/media.html
@@ -4,11 +4,11 @@
     <title>Hello</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
   </head>
   
-    <script src="vendor/popper/popper.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/vendor/popper/popper.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
     <div class="container">
       <div class="row">
         <div class="col justify-content-center">
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="col" >
-          <div class="row" id="recordCol">
+          <div class="row" id="recordRow">
             <button class="btn-primary" id="start">녹화시작하기</button>
           </div>
           
@@ -45,6 +45,9 @@
           
           <input type="text" id="sName" name="sName" placeholder="스트림 이름">
           <button class="btn-primary" id="sStart">스트림 연결</button>
+          <div class="row" id="streamRow">
+            <label id="streamStatus"></label>
+          </div>
         </div>
       </div>
 
@@ -61,7 +64,7 @@
       }
     </script>
 
-    <script src="js/getusrMedia.js"></script>
+    <script src="/js/getusrMedia.js"></script>
   
   </body>
 </html>
