--- a/src/main/resources/templates/testmpd.html
+++ b/src/main/resources/templates/testmpd.html
@@ -41,11 +41,11 @@
   </script>
 
   <div class="container-md">
-    <div class="dash-video-player ">
+    <div class="dash-video-player" style=" width: 70%; max-height: 70%;">
         <div class="videoContainer" id="videoContainer">
-            <video style=" width: 100%; max-height: 100%;"  preload="auto" autoplay=""></video>
+            <video  preload="auto" autoplay=""></video>
             <div id="videoController" class="video-controller unselectable">
-                <div id="playPauseBtn" class="btn-play-pause" title="Play/Pause">
+                <div  id="playPauseBtn" class="btn-play-pause" title="Play/Pause">
                     <span id="iconPlayPause" class="icon-play"></span>
                 </div>
                 <span id="videoTime" class="time-display">00:00:00</span>
