--- a/src/main/resources/templates/testmpd.html
+++ b/src/main/resources/templates/testmpd.html
@@ -41,9 +41,9 @@
   </script>
 
   <div class="container-md">
-    <div class="dash-video-player" style=" width: 70%; max-height: 70%;">
+    <div class="dash-video-player" style=" width: 100%; max-height: 100%;">
         <div class="videoContainer" id="videoContainer">
-            <video  preload="auto" autoplay=""></video>
+            <video style=" width: 100%; max-height: 100%;" preload="auto" autoplay=""></video>
             <div id="videoController" class="video-controller unselectable">
                 <div  id="playPauseBtn" class="btn-play-pause" title="Play/Pause">
                     <span id="iconPlayPause" class="icon-play"></span>
