--- a/src/main/resources/templates/media.html
+++ b/src/main/resources/templates/media.html
@@ -22,6 +22,7 @@
         <div class="col">
           <input type="radio" id="scrn" name="captureMethod" value="scrn" checked> 화면공유
           <input type="radio" id="dvc" name="captureMethod" value="dvc"> 장치공유
+          <input type="radio" id="rtmp" name="captureMethod" value="rtmp"> rtmp 
           
           <!--<button class="btn-primary" onClick="startCapture()">화면공유</button>
           <button class="btn-primary" onClick="startDeviceCapture()">캠 캡쳐</button>-->
