--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -10,6 +10,7 @@
                 <td th:text="${article.id}">번호</td>
                 <td th:text="${article.title}">제목</td>
                 <td th:text="${article.author}">작성자</td>
+                <td th:text="${article.body}">내용</td>
                 <td th:text="${article.wdate}">날짜</td>
                 <td th:text="${article.views}">조회수</td>
             </tr>
