--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,11 @@
  <title>Hello</title>
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="css/bootstrap.min.css" />
+ <link rel="stylesheet" href="/css/bootstrap.min.css" />
 </head>
 <body>
-<script src="vendor/popper/popper.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+<script src="/vendor/popper/popper.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
 <nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
     <div class="container-fluid">
@@ -60,8 +60,8 @@
             </thead>
             <tbody>
                 <tr th:each="article : ${articles}" >
-                    <td><a th:text="${article.id}" th:href="@{post(id=${article.id})}">View page</a></td>
-                    <td th:text="${article.title}">제목</td>
+                    <td><a th:text="${article.id}" >View page</a></td>
+                    <td><a th:text="${article.title}" th:href="@{/post(id=${article.id})}" >제목</a></td>
                     <td th:text="${article.author}">작성자</td>
                     <td th:text="${article.wdate}">날짜</td>
                     <td th:text="${article.views}">조회수</td>
@@ -72,15 +72,15 @@
 
             <nav>
               <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                <li class="page-item"><a class="page-link" href="#" th:if="${hasPrevious}">Previous</a></li>
+                <li class="page-item" th:each="num : ${#numbers.sequence(start,end)}" >
+                  <a class="page-link" th:text="${num}" th:href="${num}">1</a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#" th:if="${hasNext}">Next</a></li>
               </ul>
             </nav>
 
-            <a href="post/add" class="btn btn-primary">글쓰기</a>           
+            <a href="/post/add" class="btn btn-primary">글쓰기</a>           
         </div>
       </div>
 
