--- a/src/main/resources/templates/higlogin.html
+++ b/src/main/resources/templates/higlogin.html
@@ -114,7 +114,7 @@
     <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
     
   </form>
-  <a class="w-100 btn btn-lg"  href="/oauth2/authorization/kakao"><img src="/images/kakao_login_medium_wide.png" width="100%"/></a>
+  <a class="w-100 btn btn-lg" style="padding:0"  href="/oauth2/authorization/kakao"><img src="/images/kakao_login_medium_wide.png" width="100%" hegiht="100%"/></a>
     <button type="button" class="w-100 btn btn-lg btn-secondary mt-1" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">회원가입</button>   
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
