--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,18 +75,29 @@
                 </tr>
             </tbody>
         </table>
-        <div class="d-flex justify-content-between">
+        <div class="row">
+          <div class="col justify-self-start">
+            <form method="GET" action="/home">
+                <input type="serach" name="query">
+                <input type="hidden" name="pageNum" value="0">
+                <input type="submit" value="검색">
+            </form>
+          </div>
+          <div class="col" align="center">
             <nav>
               <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#" th:if="${hasPrevious}">Previous</a></li>
                 <li class="page-item" th:each="num : ${#numbers.sequence(start,end)}" >
-                  <a class="page-link" th:text="${num}" th:href="${num}">1</a>
+                  <a class="page-link" th:text="${num}" th:href="@{home(pageNum=${num})}">1</a>
                 </li>
                 <li class="page-item"><a class="page-link" href="#" th:if="${hasNext}">Next</a></li>
               </ul>
             </nav>
+          </div>
 
-            <a href="/post/add" class="btn btn-outline-primary">글쓰기</a>
+          <div class="col justify-self-end" align="right">
+            <a href="/post/add" class="btn btn-outline-primary" >글쓰기</a>
+          </div>
         </div>
       </div>
 
