--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -88,7 +88,7 @@
               <ul class="pagination">
                 <li class="page-item"><a class="page-link" href="#" th:if="${hasPrevious}">Previous</a></li>
                 <li class="page-item" th:each="num : ${#numbers.sequence(start,end)}" >
-                  <a class="page-link" th:text="${num}" th:href="@{home(pageNum=${num})}">1</a>
+                  <a class="page-link" th:text="${num}" th:href="@{home(pageNum=${num},query=${query})}">1</a>
                 </li>
                 <li class="page-item"><a class="page-link" href="#" th:if="${hasNext}">Next</a></li>
               </ul>
