--- a/src/main/resources/templates/higlogin.html
+++ b/src/main/resources/templates/higlogin.html
@@ -87,7 +87,14 @@
   <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?compat=recaptcha" async defer></script>
   <script src="vendor/popper/popper.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<main class="form-signin w-100 m-auto">
+  <main class="form-signin w-100 m-auto">
+    <div class="toast show text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" th:if="${error}">
+      <div class="d-flex">
+        <div class="toast-body" role="alert" th:text="${error}">
+        </div>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button> 
+      </div>
+  </div>
   <div th:if="${param.fail}" class="alert alert-danger" role="alert">
     비밀번호 또는 아이디가 올바르지 않습니다.</div>
   <div th:if="${error}" th:text="${error}"class="alert alert-danger" role="alert">
