--- a/src/main/resources/templates/streams.html
+++ b/src/main/resources/templates/streams.html
@@ -21,7 +21,13 @@
       </div>
     </div>
   </nav>
-
+  <div class="toast show text-white bg-danger border-0" role="alert" aria-live="assertive" aria-atomic="true" th:if="${error}">
+    <div class="d-flex">
+      <div class="toast-body" role="alert" th:text="${error}">
+      </div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button> 
+    </div>
+  </div>
 
     <div class="container">
         <div class="row row-cols-4">
