edit thymeleaf text

--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -27,7 +27,7 @@
                      내용
                 </div>
                 <div class ="col-sm-9">
-                        <textarea class="form-control" name="body" cols="50" style="resize:none; height:100%;" th:value="${article.body}"></textarea>        
+                        <textarea class="form-control" name="body" cols="50" style="resize:none; height:100%;" th:text="${article.body}"></textarea>        
                 </div>
             </div>
             <div class="row">
