modify rest url

--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -32,7 +32,12 @@
           <h1 th:text="${article.title}">제목</h1><br>
           <h6 th:text="${article.author}">작성자</h6> <h6 th:text="${article.wdate}">날짜</h6> <h6 th:text="${article.views}">조회수</h6>
           <div class="col">
-            <a th:if="${username == article.author}" th:href="@{/post/delete(id=${article.id})}" class="btn btn-primary">삭제</a>
+            <form th:if="${username == article.author}" th:action="@{/post}" method="post">
+              <input type="hidden" name="_method" value="delete"/>
+              <input type="hidden" name="id" th:value="${article.id}"/>
+              <button type="submit" class="btn btn-primary">삭제</button>
+            </form>
+            <!--<a th:if="${username == article.author}" th:href="@{/post/delete(id=${article.id})}" class="btn btn-primary">삭제</a>-->
             <a th:if="${username == article.author}" th:href="@{/post/update(id=${article.id})}" class="btn btn-primary">수정</a>
           </div>
           <hr class="border border-danger border-2 opacity-50">
